# halo2-native-ecc

./: Cargo.toml
src/: arith_gates.rs  chip.rs  config.rs  ec_gates.rs  util.rs
src/arith_gates/: tests.rs
src/ec_gates/: tests.rs
