[package]
name = "halo2-native-ecc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["circuit-params"] }
halo2_middleware = { package = "halo2_middleware", git = "https://github.com/privacy-scaling-explorations/halo2" }
halo2curves = { git = "https://github.com/dragan2234/halo2curves.git", branch = "support-bandersnatch-group" }
halo2_frontend = { package = "halo2_frontend", git = "https://github.com/privacy-scaling-explorations/halo2" }

ark-std = { version = "0.4.0", features = ["print-trace"] }

[features]
default = []
# default = [ "verbose" ]
verbose = []